CHANGES
=======

1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2011-08-23)
------------------

- Add command-line script ``reindex_directory``.


1.0.0 (2011-08-22)
------------------

- first release.