@@ -4,7 +4,8 @@ CHANGES
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Transform the XML body into a nested dict so ElasticSearch can index the
+  fields individually.
 
 
 1.1.0 (2011-08-23)
